--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   color: #eeeded;
-  background: #64aaa3;
+  background: #76b6be;
   overflow-x: hidden;
 }
 
@@ -264,6 +264,8 @@ a {
   flex-direction: column;
   justify-content: flex-start;
   width: 100vw;
+  height: 100vh;
+  min-height: 900px;
   overflow: hidden;
 }
 
@@ -331,6 +333,10 @@ p {
   flex-direction: column;
   align-items: center;
   width: 70%;
+}
+
+.projects p {
+  margin-top: 30px;
 }
 
 .list {
@@ -447,6 +453,7 @@ footer {
   .third-section .jump {
     padding: 10px;
     height: initial;
+    padding-top: 25px;
   }
 
   .third-section .jump .third-pic {
