[smart-city-finder] add to portfolio

--- a/css/main.css
+++ b/css/main.css
@@ -368,8 +368,8 @@ p {
   background: white url('../img/dela.jpg') center no-repeat;
 }
 
-.guessthatsong {
-  background: url('../img/guessthatsong.png') center no-repeat;
+.smart-city-finder {
+  background: url('../img/scf.jpg') center no-repeat;
 }
 
 .memorygame {
