--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,6 @@ a {
   display: flex;
   -ms-flex-pack: distribute;
   justify-content: space-around;
-
   font-size: 25px;
   border-top: 1px solid white;
   border-bottom: 1px solid white;
@@ -303,10 +302,10 @@ a {
 }
 
 .jump .icons a div {
-  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
-  display: -ms-flexbox;  /* TWEENER - IE 10 */
-  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
-  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
+  display: -webkit-box; 
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
   align-self: center;
   -webkit-align-self: center;
 }
